--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <div class="wrapper1">
       <header>
         <h1 class="{{ data-theme === 'light' ? 'light-theme' : 'dark-theme' }}">
-          {{ site.title | default: site.github.repository_name }} | colorize: theme === 'light' ? '#000' : '#3f4f6'
+          {{ site.title | default: site.github.repository_name }}
         </h1>
 
         {% if site.logo %}
