--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <img src="{{ '/assets/img/light-mode.png' | relative_url }}" id="light-icon" style="display: none;" alt="Light Mode Icon">
           <img src="{{ '/assets/img/night-mode.png' | relative_url }}" id="dark-icon" alt="Dark Mode Icon">
         </button>
-        <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" style="margin-top: 0px !imoprtant; margin-bottom: 8px !important;" />
+        <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" style="margin-top: 0px !important; margin-bottom: 8px !important;" />
         {% endif %}
 <!--         <h1>{{ site.title }}</h1>
         <p>{{ site.description }}</p> -->
@@ -65,14 +65,14 @@
 <!--         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %} -->
-
+<!-- 
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
-        {% endif %}
+        {% endif %} -->
       </header>
       <section style="bottom: auto !important;
         margin-bottom: auto !important;
