--- a/_sass/custom-fonts.scss
+++ b/_sass/custom-fonts.scss
@@ -57,3 +57,7 @@
        url('../fonts/Avenir-Next/Avenir-Next-Bold.ttf') format('truetype'),
        url('../fonts/Avenir-Next/Avenir-Next-Bold.svg#AvenirNext') format('svg');
 }
+
+#about {
+    font-weight: bold;
+}
