--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,7 +18,7 @@
 
 #about {
   font-size: 24px; /* Change this to your desired font size */
-  font-weight: normal; /* Optional: change the font weight */
+  font-weight: bold; /* Optional: change the font weight */
 }
 
 .social-icons {
