--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,7 +3,7 @@
   height: 150px; /* Adjust size as needed */
   border-radius: 50%;
   object-fit: cover;
-  filter: blur(6px);
+  backdrop-filter: blur(6px);
 }
 
 .wrapper1 {
