--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -94,6 +94,12 @@ body {
     --link-hover-color: darkgray; /* Default hover color for light mode */
 }
 
+@media (prefers-color-scheme: light) {
+    :root {
+        --link-color: blue; /* Link color for light mode */
+        --link-hover-color: lightblue; /* Hover color for light mode */
+    }
+}
 /* Dark mode colors using prefers-color-scheme media query */
 @media (prefers-color-scheme: dark) {
     :root {
