--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -89,7 +89,7 @@ body {
 }
 
 /* Default light mode colors */
-@media (prefers-color-scheme: light) {
+@media (light-theme) {
 
 :root {
     --link-color: black; /* Default link color for light mode */
