--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -97,20 +97,30 @@ body {
 
 
 /* Dark mode colors using prefers-color-scheme media query */
-@media (prefers-color-scheme: dark) {
-    :root {
-        --link-color: lightgray; /* Link color for dark mode */
-        --link-hover-color: white; /* Hover color for dark mode */
-    }
+:root {
+    --link-color-light: black;
+    --link-color-dark: white;
+    --link-hover-light: red;
+    --link-hover-dark: yellow;
 }
 
-.custom-link {
-    color: var(--link-color); /* Use CSS variable for link color */
+/* Default styles for light mode */
+a {
+    color: var(--link-color-light);
     text-decoration: none;
 }
+a:hover {
+    color: var(--link-hover-light);
+}
 
-.custom-link:hover {
-    color: var(--link-hover-color); /* Use CSS variable for hover color */
+/* Styles for dark mode */
+@media (prefers-color-scheme: dark) {
+    a {
+        color: var(--link-color-dark);
+    }
+    a:hover {
+        color: var(--link-hover-dark);
+    }
 }
 
 
