--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
         <h1 id="about" class="{% if theme == 'light' %}light-theme{% else %}dark-theme{% endif %}">About</h1>
         <p>Hey there, I'm an adaptable project manager who's diving headfirst into the world of software engineering and machine learning. I've got a knack for optimizing processes and leading strategic initiatives, and I'm excited to bring my strong analytical skills to tech-driven environments. I'm all about continuous learning and can't wait to see where this journey takes me.</p>
         <h2 id="projects" class="{{ theme === 'light' ? 'light-theme' : 'dark-theme' }}">Portfolio</h2>
-        <p> <a href="http://localhost:8502" class="custom-link underscore"> • Mortgage Calculator Repayment Web App</a></p>
+        <p> <a href="http://localhost:8502" class="custom-link"> • Mortgage Calculator Repayment Web App</a></p>
         <p> <a href="https://github.com/peterjps/Multi-AI-Agents" class="custom-link"> • Multi-AI Agent System - Financial Analysis </a></p>
         <p> <a href="https://peterjps.github.io/Peter.ai/" class="custom-link"> • Github WebPage </a></p>
       </section>
