--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
     <style>
         .custom-link {
-            text-decoration: none;
+            text-decoration: underline;
         }
     </style>
   </head>
