--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,9 +100,9 @@
 
 
       <footer>
-        {% if site.github.is_project_page %}
+<!--         {% if site.github.is_project_page %}
         <p>Copyright by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
+        {% endif %} -->
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
