--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         }
     </style>
   </head>
-  <body style='margin-left: 500px !important;'>
+  <body>
     
     <div class="wrapper1">
       <header>
