--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,11 +112,7 @@
 
 
 
-      <footer>
-<!--         {% if site.github.is_project_page %}
-        <p>Copyright by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %} -->
-      </footer>
+
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     <script>
@@ -239,7 +235,11 @@
       // const savedTheme = localStorage.getItem('theme') || 'light';
       // document.documentElement.setAttribute('data-theme', savedTheme);
       // updateIcons(savedTheme);
-
+      <footer>
+// <!--         {% if site.github.is_project_page %}
+//         <p>Copyright by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+//         {% endif %} -->
+      <footer>
     </script>
   </body>
 </html>
