--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,9 @@
         <button id="theme-toggle" class="theme-toggle" style="margin-left: 500px !important; margin-right: 485px !important; margin-bottom: 0px !important; top: 52px !important; left: 275px !important;">
           <img src="{{ '/assets/img/light-mode.png' | relative_url }}" id="light-icon" style="display: none;" alt="Light Mode Icon">
           <img src="{{ '/assets/img/night-mode.png' | relative_url }}" id="dark-icon" alt="Dark Mode Icon">
-        </button>
+        </button>  {% endif %}
         <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" style="margin-top: 0px !important; margin-bottom: 8px !important;"/>
-        {% endif %}
+      
 <!--         <h1>{{ site.title }}</h1>
         <p>{{ site.description }}</p> -->
 
